--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -44,7 +44,7 @@
       <a href="{{ site.url }}/atom.xml" target="_blank"><img src="{{ site.url }}/images/rss.png" border="0"/></a>
       <br>
       {% if site.twitter %}
-      <a href="https://twitter.com/{{ site.twitter }}" target="_blank"><img src="{{ site.url }}/images/twitter.png"></a>
+      <a href="https://www.facebook.com/{{ site.facebook }}" target="_blank"><img src="{{ site.url }}/images/fb.png"></a>
       {% endif %}
 
       {% if site.calendar %}
