--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -44,13 +44,13 @@
       <a href="https://www.facebook.com/{{ site.facebook }}" target="_blank"><img src="{{ site.url }}/images/fb.png"></a>
       <br>
       <a href="{{ site.calendar }}"><img src="{{ site.url }}/images/calendar.png"/></a>
+      </section>
       <a href="{{ site.mailinglist }}"><img src="{{ site.url }}/images/email.png"/></a>
     <section class="sections">
-    </section>
       <ul>
         <li><a href="{{ site.url }}/">acerca</a></li>
-        <li><a href="{{ site.url }}/upcoming.html">futuros</a></li>
-        <li><a href="{{ site.url }}/previous.html">anteriores</a></li>
+        <li><a href="{{ site.url }}/upcoming.html">eventos futuros</a></li>
+        <li><a href="{{ site.url }}/previous.html">evnetos anteriores</a></li>
       </ul>
     </section>
   </section>
