--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -42,7 +42,7 @@
     <section class="meta">
       <a href="{{ site.github.owner_url }}" target="_blank"><img src="{{ site.url }}/images/github.png"/></a>
       <br>
-      {% if site.twitter %}
+      {% if site.facebook %}
       <a href="https://facebook.com/{{ site.facebook }}" target="_blank"><img src="{{ site.url }}/images/fb.png"></a>
       {% endif %}
 
