--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,14 +15,12 @@ layout: layout
 
   <section class="form">
     <h3>Inscripción</h3>
-    <div class="col-1-2">
       <form method="POST" action="https://formspree.io/shpotes3@gmail.com">
-        <input type="text" name="name" placeholder="Nombre" required="">
-        <input type="number" name="id" placeholder="Código" required="">
+        <input type="text" name="name" placeholder="Nombre" required=""><br>
+        <input type="number" name="id" placeholder="Código" required=""><br>
         <input type="email" name="_replyto" placeholder="Correo Institucional" required="">
-        <button style="width: 100%" type="submit">Enviar</button>
+        <button style="width: 50%" type="submit">Enviar</button>
       </form>
-    </div>
   </section>
   
   <section class="shares">
