--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,12 +15,14 @@ layout: layout
 
   <section class="form">
     <h3>Inscripción</h3>
+    <div class="col-1-2">
       <form method="POST" action="https://formspree.io/shpotes3@gmail.com">
-        <input type="text" name="name" placeholder="Nombre" required=""><br>
-        <input type="number" name="id" placeholder="Código" required=""><br>
-        <input type="email" name="_replyto" placeholder="Correo Institucional" required="">
-        <button style="width: 50%" type="submit">Enviar</button>
+        <input style="width: 75%" type="text" name="name" placeholder="Nombre" required=""><br>
+        <input style="width: 75%" type="number" name="id" placeholder="Código" required=""><br>
+        <input style="width: 75%" type="email" name="_replyto" placeholder="Correo Institucional" required="">
+        <button style="width: 35%" type="submit">Enviar</button>
       </form>
+    </div>
   </section>
   
   <section class="shares">
