--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,36 +12,17 @@ layout: layout
   </section>
 
   {{ content }}
-
-  <section class="container">
-    <h3>Inscripción</h3>
-    <form method="POST" action="https://formspree.io/shpotes3@gmail.com">
-      <div class="row control-group">
-        <div class="form-group col-xs-12 floating-label-form-group controls">
-          <label>Name</label>
-          <input type="text" class="form-control" placeholder="Name" name="name" required="">
-        </div>
-      </div>
-      <div class="row control-group">
-        <div class="form-group col-xs-12 floating-label-form-group controls">
-          <label>Email Address</label>
-          <input type="email" class="form-control" placeholder="Email Address" name="_replyto" required="">
-        </div>
-      </div>
-      <div class="row control-group">
-        <div class="form-group col-xs-12 floating-label-form-group controls">
-          <label>Message</label>
-          <textarea rows="5" class="form-control" placeholder="Message" name="message" required=""></textarea>
-        </div>
-      </div>
-      <input type="text" name="_gotcha" style="display:none">
-      <br>
-      <div id="success"></div>
-      <div class="row">
-        <div class="form-group col-xs-12">
-          <button type="submit" class="btn btn-default" value="Send">Send</button>
-        </div>
-      </div>
+  
+  <div class="form-style-8">
+    <h2>Inscripción</h2>
+    <form>
+      <input type="text" name="field1" placeholder="Full Name" />
+      <input type="email" name="field2" placeholder="Email" />
+      <input type="url" name="field3" placeholder="Website" />
+      <textarea placeholder="Message" onkeyup="adjust_textarea(this)"></textarea>
+      <input type="button" value="Send Message" />
+    </form>
+  </div>
       <!--
           <form method="POST" action="https://formspree.io/shpotes3@gmail.com">
             <input style="width: 75%" type="text" name="name" placeholder="Nombre" required=""><br>
@@ -50,8 +31,6 @@ layout: layout
             <button style="width: 35%" type="submit">Enviar</button>
           </form>
           -->
-  </section>
-  
   <section class="shares">
     <h3>Share</h3>
     <!-- AddThis Button BEGIN -->
