--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,38 +14,95 @@ layout: layout
   {{ content }}
   
   <div class="form-style-8">
-    <h2>Inscripción</h2>
+    <h2>Login to your account</h2>
     <form>
-      <input type="text" name="field1" placeholder="Full Name" />
-      <input type="email" name="field2" placeholder="Email" />
-      <input type="url" name="field3" placeholder="Website" />
-      <textarea placeholder="Message" onkeyup="adjust_textarea(this)"></textarea>
-      <input type="button" value="Send Message" />
+      <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
+      <style type="text/css">
+        .form-style-8{
+        font-family: 'Open Sans Condensed', arial, sans;
+        width: 500px;
+        padding: 30px;
+        background: #FFFFFF;
+        margin: 50px auto;
+        box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
+        -moz-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
+        -webkit-box-shadow:  0px 0px 15px rgba(0, 0, 0, 0.22);
+
+        }
+        .form-style-8 h2{
+        background: #4D4D4D;
+        text-transform: uppercase;
+        font-family: 'Open Sans Condensed', sans-serif;
+        color: #797979;
+        font-size: 18px;
+        font-weight: 100;
+        padding: 20px;
+        margin: -30px -30px 30px -30px;
+        }
+        .form-style-8 input[type="text"],
+        .form-style-8 input[type="date"],
+        .form-style-8 input[type="datetime"],
+        .form-style-8 input[type="email"],
+        .form-style-8 input[type="number"],
+        .form-style-8 input[type="search"],
+        .form-style-8 input[type="time"],
+        .form-style-8 input[type="url"],
+        .form-style-8 input[type="password"],
+        .form-style-8 textarea,
+        .form-style-8 select 
+        {
+        box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        outline: none;
+        display: block;
+        width: 100%;
+        padding: 7px;
+        border: none;
+        border-bottom: 1px solid #ddd;
+        background: transparent;
+        margin-bottom: 10px;
+        font: 16px Arial, Helvetica, sans-serif;
+        height: 45px;
+        }
+        .form-style-8 textarea{
+        resize:none;
+        overflow: hidden;
+        }
+        .form-style-8 input[type="button"], 
+        .form-style-8 input[type="submit"]{
+        -moz-box-shadow: inset 0px 1px 0px 0px #45D6D6;
+        -webkit-box-shadow: inset 0px 1px 0px 0px #45D6D6;
+        box-shadow: inset 0px 1px 0px 0px #45D6D6;
+        background-color: #2CBBBB;
+        border: 1px solid #27A0A0;
+        display: inline-block;
+        cursor: pointer;
+        color: #FFFFFF;
+        font-family: 'Open Sans Condensed', sans-serif;
+        font-size: 14px;
+        padding: 8px 18px;
+        text-decoration: none;
+        text-transform: uppercase;
+        }
+        .form-style-8 input[type="button"]:hover, 
+        .form-style-8 input[type="submit"]:hover {
+        background:linear-gradient(to bottom, #34CACA 5%, #30C9C9 100%);
+        background-color:#34CACA;
+        }
+      </style>
+      <script type="text/javascript">
+        //auto expand textarea
+        function adjust_textarea(h) {
+          h.style.height = "20px";
+          h.style.height = (h.scrollHeight)+"px";
+        }
+      </script>
+
+      <input type="text" name="name" placeholder="Nombre completo" />
+      <input name="id" placeholder="Código" />
+      <input type="email" name="email" placeholder="Correo Institucional" />
+      <input type="button" value="Enviar" />
     </form>
   </div>
-      <!--
-          <form method="POST" action="https://formspree.io/shpotes3@gmail.com">
-            <input style="width: 75%" type="text" name="name" placeholder="Nombre" required=""><br>
-            <input style="width: 75%" type="number" name="id" placeholder="Código" required=""><br>
-            <input style="width: 75%" type="email" name="_replyto" placeholder="Correo Institucional" required="">
-            <button style="width: 35%" type="submit">Enviar</button>
-          </form>
-          -->
-  <section class="shares">
-    <h3>Share</h3>
-    <!-- AddThis Button BEGIN -->
-    <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
-      <a class="addthis_button_twitter"></a>
-      <a class="addthis_button_google_plusone_share"></a>
-      <a class="addthis_button_delicious"></a>
-      <a class="addthis_button_reddit"></a>
-      <a class="addthis_button_mendeley"></a>
-      <a class="addthis_button_linkedin"></a>
-      <a class="addthis_button_facebook"></a>
-      <a class="addthis_button_compact"></a><a class="addthis_counter addthis_bubble_style"></a>
-    </div>
-    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=xa-51a3e77b5577941a"></script>
-    <!-- AddThis Button END -->
-  </section>
-  </form>
 </section>
