--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,182 +13,146 @@ layout: layout
 
   {{ content }}
   
-  <div class="form-style-8">
-    <header>MINIMALISTIC FORM</header>
-    <form>
+  <div class="form-style-7">
+    <h2>Inscripcion</h2>
+    <form class="form-style-7">
       <style type="text/css">
-      @import url(https://fonts.googleapis.com/css?family=Lato:100,300,400);
-  input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
-      color: #aca49c;
-      font-size: 0.875em;
-  }
-
-  input:focus::-webkit-input-placeholder, textarea:focus::-webkit-input-placeholder {
-      color: #bbb5af;
-  }
-
-  input::-moz-placeholder, textarea::-moz-placeholder {
-      color: #aca49c;
-      font-size: 0.875em;
-  }
-
-  input:focus::-moz-placeholder, textarea:focus::-moz-placeholder {
-      color: #bbb5af;
-  }
-
-  input::placeholder, textarea::placeholder {
-      color: #aca49c;
-      font-size: 0.875em;
-  }
-
-  input:focus::placeholder, textarea::focus:placeholder {
-      color: #bbb5af;
-  }
-
-  input::-ms-placeholder, textarea::-ms-placeholder {
-      color: #aca49c;
-      font-size: 0.875em;
-  }
-
-  input:focus::-ms-placeholder, textarea:focus::-ms-placeholder {
-      color: #bbb5af;
-  }
-
-  /* on hover placeholder */
-
-  input:hover::-webkit-input-placeholder, textarea:hover::-webkit-input-placeholder {
-      color: #e2dedb;
-      font-size: 0.875em;
-  }
-
-  input:hover:focus::-webkit-input-placeholder, textarea:hover:focus::-webkit-input-placeholder {
-      color: #cbc6c1;
-  }
-
-  input:hover::-moz-placeholder, textarea:hover::-moz-placeholder {
-      color: #e2dedb;
-      font-size: 0.875em;
-  }
-
-  input:hover:focus::-moz-placeholder, textarea:hover:focus::-moz-placeholder {
-      color: #cbc6c1;
-  }
-
-  input:hover::placeholder, textarea:hover::placeholder {
-      color: #e2dedb;
-      font-size: 0.875em;
-  }
-
-  input:hover:focus::placeholder, textarea:hover:focus::placeholder {
-      color: #cbc6c1;
-  }
-
-  input:hover::placeholder, textarea:hover::placeholder {
-      color: #e2dedb;
-      font-size: 0.875em;
-  }
-
-  input:hover:focus::-ms-placeholder, textarea:hover::focus:-ms-placeholder {
-      color: #cbc6c1;
-  }
-
-  body {
-      font-family: 'Lato', sans-serif;
-      background: #e2dedb;
-      color: #b3aca7;
-  }
-
-  header {
-      position: relative;
-      margin: 100px 0 25px 0;
-      font-size: 2.3em;
-      text-align: center;
-      letter-spacing: 7px;
-  }
-
-  #form {
-      position: relative;
-      width: 500px;
-      margin: 50px auto 100px auto;
-  }
-
-  input {
-      font-family: 'Lato', sans-serif;
-      font-size: 0.875em;
-      width: 470px;
-      height: 50px;
-      padding: 0px 15px 0px 15px;
-      
-      background: transparent;
-      outline: none;
-      color: #726659;
-      
-      border: solid 1px #b3aca7;
-      border-bottom: none;
-      
-      transition: all 0.3s ease-in-out;
-      -webkit-transition: all 0.3s ease-in-out;
-      -moz-transition: all 0.3s ease-in-out;
-      -ms-transition: all 0.3s ease-in-out;
-  }
-
-  input:hover {
-      background: #b3aca7;
-      color: #e2dedb;
-  }
-
-  textarea {
-      width: 470px;
-      max-width: 470px;
-      height: 110px;
-      max-height: 110px;
-      padding: 15px;
-      
-      background: transparent;
-      outline: none;
-      
-      color: #726659;
-      font-family: 'Lato', sans-serif;
-      font-size: 0.875em;
-      
-      border: solid 1px #b3aca7;
-      
-      transition: all 0.3s ease-in-out;
-      -webkit-transition: all 0.3s ease-in-out;
-      -moz-transition: all 0.3s ease-in-out;
-      -ms-transition: all 0.3s ease-in-out;
-  }
-
-  textarea:hover {
-      background: #b3aca7;
-      color: #e2dedb;
-  }
-
-  #submit {
-      width: 502px;
-      
-      padding: 0;
-      margin: -5px 0px 0px 0px;
-      
-      font-family: 'Lato', sans-serif;
-      font-size: 0.875em;
-      color: #b3aca7;
-      
-      outline:none;
-      cursor: pointer;
-      
-      border: solid 1px #b3aca7;
-      border-top: none;
-  }
-
-  #submit:hover {
-      color: #e2dedb;
-  }
-  </style>
-      <input type="text" name="name" placeholder="Nombre completo" />
-      <input type="text" name="id" placeholder="Código" />
-      <input type="email" name="email" placeholder="Correo Institucional" />
-      <input type="button" value="Enviar" />
+        .form-style-7{
+        max-width:400px;
+        margin:50px auto;
+        background:#fff;
+        border-radius:2px;
+        padding:20px;
+        font-family: Georgia, "Times New Roman", Times, serif;
+        }
+        .form-style-7 h1{
+        display: block;
+        text-align: center;
+        padding: 0;
+        margin: 0px 0px 20px 0px;
+        color: #5C5C5C;
+        font-size:x-large;
+        }
+        .form-style-7 ul{
+        list-style:none;
+        padding:0;
+        margin:0;   
+        }
+        .form-style-7 li{
+        display: block;
+        padding: 9px;
+        border:1px solid #DDDDDD;
+        margin-bottom: 30px;
+        border-radius: 3px;
+        }
+        .form-style-7 li:last-child{
+        border:none;
+        margin-bottom: 0px;
+        text-align: center;
+        }
+        .form-style-7 li > label{
+        display: block;
+        float: left;
+        margin-top: -19px;
+        background: #FFFFFF;
+        height: 14px;
+        padding: 2px 5px 2px 5px;
+        color: #B9B9B9;
+        font-size: 14px;
+        overflow: hidden;
+        font-family: Arial, Helvetica, sans-serif;
+        }
+        .form-style-7 input[type="text"],
+        .form-style-7 input[type="date"],
+        .form-style-7 input[type="datetime"],
+        .form-style-7 input[type="email"],
+        .form-style-7 input[type="number"],
+        .form-style-7 input[type="search"],
+        .form-style-7 input[type="time"],
+        .form-style-7 input[type="url"],
+        .form-style-7 input[type="password"],
+        .form-style-7 textarea,
+        .form-style-7 select 
+        {
+        box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        width: 100%;
+        display: block;
+        outline: none;
+        border: none;
+        height: 25px;
+        line-height: 25px;
+        font-size: 16px;
+        padding: 0;
+        font-family: Georgia, "Times New Roman", Times, serif;
+        }
+        .form-style-7 input[type="text"]:focus,
+        .form-style-7 input[type="date"]:focus,
+        .form-style-7 input[type="datetime"]:focus,
+        .form-style-7 input[type="email"]:focus,
+        .form-style-7 input[type="number"]:focus,
+        .form-style-7 input[type="search"]:focus,
+        .form-style-7 input[type="time"]:focus,
+        .form-style-7 input[type="url"]:focus,
+        .form-style-7 input[type="password"]:focus,
+        .form-style-7 textarea:focus,
+        .form-style-7 select:focus 
+        {
+        }
+        .form-style-7 li > span{
+        background: #F3F3F3;
+        display: block;
+        padding: 3px;
+        margin: 0 -9px -9px -9px;
+        text-align: center;
+        color: #C0C0C0;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 11px;
+        }
+        .form-style-7 textarea{
+        resize:none;
+        }
+        .form-style-7 input[type="submit"],
+        .form-style-7 input[type="button"]{
+        background: #2471FF;
+        border: none;
+        padding: 10px 20px 10px 20px;
+        border-bottom: 3px solid #5994FF;
+        border-radius: 3px;
+        color: #D2E2FF;
+        }
+        .form-style-7 input[type="submit"]:hover,
+        .form-style-7 input[type="button"]:hover{
+        background: #6B9FFF;
+        color:#fff;
+        }
+      </style>
+      <ul>
+        <li>
+          <label for="name">Name</label>
+          <input type="text" name="name" maxlength="100">
+          <span>Enter your full name here</span>
+        </li>
+        <li>
+          <label for="email">Email</label>
+          <input type="email" name="email" maxlength="100">
+          <span>Enter a valid email address</span>
+        </li>
+        <li>
+          <label for="url">Website</label>
+          <input type="url" name="url" maxlength="100">
+          <span>Your website address (eg: http://www.google.com)</span>
+        </li>
+        <li>
+          <label for="bio">About You</label>
+          <textarea name="bio" onkeyup="adjust_textarea(this)"></textarea>
+          <span>Say something about yourself</span>
+        </li>
+        <li>
+          <input type="submit" value="Send This" >
+        </li>
+      </ul>
     </form>
   </div>
 </section>
