--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -53,9 +53,9 @@
 
     <section class="sections">
       <ul>
-        <li><a href="{{ site.url }}/">about</a></li>
-        <li><a href="{{ site.url }}/upcoming.html">upcoming</a></li>
-        <li><a href="{{ site.url }}/previous.html">previous</a></li>
+        <li><a href="{{ site.url }}/">inicio</a></li>
+        <li><a href="{{ site.url }}/upcoming.html">futuro</a></li>
+        <li><a href="{{ site.url }}/previous.html">pasado</a></li>
       </ul>
     </section>
   </section>
