add google form... i think

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,14 +7,12 @@ layout: layout
     <a href="{{ site.url }}{{ page.url }}">{{ page.title }}</a>
   </h1>
 
-  <section class="byline">
-    {{ page.date | date: "%B %e, %Y" }}
+  <section class="byline"><>
+    {{ page.date | date: "%B %e, %Y" }} 
   </section>
 
   {{ content }}
-  <!-- TODO form
-  <div class="form-style-7">
-    <style type="text/css"></style>
-  </div>-->
+  
+  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe0M4FNg7kepVPjYVJbTyS1MlYiqM4kkz_NAMU4AFvn3j8D4A/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
   
 </section>
