--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@ layout: layout
     <a href="{{ site.url }}{{ page.url }}">{{ page.title }}</a>
   </h1>
 
-  <section class="byline"><>
+  <section class="byline">
     {{ page.date | date: "%B %e, %Y" }} 
   </section>
 
