--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,8 @@ layout: layout
   </section>
 
   {{ content }}
-  
+
+  <h2><a href="https://goo.gl/forms/p4GCYTBMZiGIp6jI2">Inscripción</a></h2>
   <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe0M4FNg7kepVPjYVJbTyS1MlYiqM4kkz_NAMU4AFvn3j8D4A/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
   
 </section>
