--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -12,8 +12,8 @@
   <meta name="author" content="{{ site.name }}" />
   <meta name="description" content="{{ site.description }}" />
 
-  <link rel="icon" type="image/x-icon" href="favicon.ico" />
-  <link rel="icon" type="image/png" href="apple-touch-icon.png" />
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+  <link rel="icon" type="image/png" href="/apple-touch-icon.png" />
   
   <link rel="alternate" type="application/rss+xml" href="{{ site.url }}/atom.xml" />
 
